# routes/user.js
@@ -5,7 +5,6 @@ import Admin from '../controller/admin'
 
 router.get('/v1/getUserInfo', User.getUserInfo)
 router.get('/v1/getRecord', User.getRecord)
-router.post('/v1/logout', User.logout)
 router.post('/v1/saveMood', User.saveMood)
 router.get('/v1/getMood', User.getMood)
 router.post('/v1/saveYuan', User.saveYuan)
